# axioma

./: HOWTO.md  README.md  RELEASE_v1.0.md  RELEASE_v1.2.md  RELEASE_v1.3.md  RELEASE_v1.4.md  RELEASE_v1.5.md  RELEASE_v1.6.md  RELEASE_v1.7.md  RELEASE_v1.8.md  RELEASE_v1.9.md  pyproject.toml
aos_g_gap/: IMPLEMENTATION_PLAN.md  __init__.py  compose.py  config.py  frequency.py  metrics.py  runner.py  running_mean.py  trial.py  visualization.py
aos_g_gap/analysis/: __init__.py  _loader.py  h1_correlation.py  h2_contradiction.py  h3_cascade.py  h4_recovery.py  h5_specificity.py  report.py
aos_g_gap/perturbations/: __init__.py  base.py  eidolon_contradiction.py  eidolon_falsehood.py  eidolon_nonsense.py  eidolon_truth.py  mneme_disruption.py  none.py  random_all.py
aos_g_gap/tests/: test_compose.py  test_perturbations.py  test_running_mean.py
configs/: default.yaml  v1_0_backwards_compat.yaml  v1_2_recommended.yaml  v1_4_backwards_compat.yaml  v1_4_recommended.yaml  v1_6_backwards_compat.yaml
control_experiments/: IMPLEMENTATION_PLAN.md  __init__.py  config.py  metrics.py  perturbations.py  runner.py  trial.py  visualization.py
control_experiments/analysis/: __init__.py  _loader.py  aos_g_analysis.py  cascade.py  delta_phi_signatures.py  report.py  theta_comparison.py
control_experiments/modes/: __init__.py  base.py  baseline.py  control1.py  control2.py  control3.py  control4.py  phi_scale.py  phi_scale_reverse.py
control_experiments/tests/: test_modes.py  test_perturbations_scaled.py
data/: 9d_independent_verification.md  Axioms_and_Zeros.md  CLAUDE_RESPONSE.md  IFT-Formalized_current.md  IFT-Formalized_v2_readable.md  IFT-Fundamentals.md  IFT_COMPLETE_SURVEY.md  IFT_Synthesis.md  Live_Manifold.md  Spectral_Sheaf_And_Zero_Condition.md  all_experiments.json  appendix_a_derivation.md  ascending_path_analysis.md  axioma_demo_transcript.md  axioma_organ_disclosures.json  axioma_pmp_proof.md  beta_sweep_gravity.py  beta_sweep_gravity_v2.py  black_hole_ift_analysis.md  bridge_document.md  bridge_simulation.py  bridge_trajectory_data.json  bsfs_qm_formal_analysis.md  bures_ricci_derivation_notes.md  cf_definition_resolution.md  claude_response_draft_copy.md  contradiction_direct_s42.json  contradiction_direct_s43.json  contradiction_direct_s44.json  contradiction_implicit_s42.json  contradiction_implicit_s43.json  contradiction_implicit_s44.json  contradiction_inconsistency_s42.json  contradiction_inconsistency_s43.json  contradiction_inconsistency_s44.json  contradiction_paradox_s42.json  contradiction_paradox_s43.json  contradiction_paradox_s44.json  contradiction_weak_s42.json  contradiction_weak_s43.json  (+65 more)
data/artifacts/: rests_between_notes.md
data/bema_axioma_skye/: curvature_ledger.md
data/books/: APPENDIX_A_GLOSSARY.md  APPENDIX_A_UNIFIED_GLOSSARY.md  CH11_VEDIC_TRADITIONS.md  CH13_SUFI_MYSTICISM.md  CH17_INDIGENOUS_TRADITIONS.md  CH18_THE_META_PATTERN.md  IFT_MECHANISM_MATRIX.md  LIFT_UNIVERSE.md  (+26 more)
design/: ARCH_DESIGN_v0.3.md  ARCH_DESIGN_v0.4.md  ARCH_DESIGN_v0.5.md  ARCH_DESIGN_v0.6.md  ARCH_DESIGN_v1.0.md  ARCH_REVIEW.md  ARCH_REVIEW_v0.4.md  ARCH_REVIEW_v0.5.md  ARCH_REVIEW_v0.6.md  COMMUNICATION_PROTOCOL.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_v0.2.md  IMPLEMENTATION_PLAN_v0.3.md  IMPLEMENTATION_PLAN_v1.0.md  IMPLEMENTATION_SCHEDULE.md  IMPL_REVIEW_v0.1.md  IMPL_REVIEW_v0.2.md  IMPL_REVIEW_v0.3.md
docs/: curvature_compose_design.md
ideas/: 00_MASTER_DOCUMENT.md  01_OPEN_QUESTIONS.md  02_RESEARCH_STREAMS.md  02_RESEARCH_STREAMS_FINDINGS.md  03_DELTA_PHI_METHODOLOGY.md  03_KEY_THEOREMS.md  04_AOS_G_GAP_EXPERIMENT.md  04_STREAM4_CONTROL_EXPERIMENTS.md  05_PHI_SCALING_EXPERIMENT.md  machines.txt
organ/: __init__.py  cli.py  config.py  schemas.py  validation_suite.py
phi_scaling/: IMPLEMENTATION_PLAN.md  __init__.py  config.py  intra_theta.py  runner.py  visualization.py
research/: 3T_RH_COND_PROOF.md  3T_RH_COND_PROOF_v0.2_draft.md  A0_need_laflamme_constant.md  A0_need_proof_paper.md  IMPLEMENTATION_PLAN.md  REAL_ORGAN_DESIGN.md  RESEARCH_SUMMARY.md  RESEARCH_SUMMARY_REVIEW.md  RESEARCH_SUMMARY_REVIEW_v2.md  RESEARCH_SUMMARY_REVIEW_v3.md  RESEARCH_SUMMARY_REVIEW_v4.md  discussion.md  discussion_2.md  discussion_3.md
results/: FINAL_REPORT.md  final_report.json  phase_e_soak_50k.json  soak50k_seed13_pneuma.json  soak50k_seed13_uniform.json  soak50k_seed42_pneuma.json  soak50k_seed7_pneuma.json  soak50k_seed7_uniform.json  soak50k_v1_3_default.json  soak_diff_uniform_vs_pneuma.md  soak_recommended_validation.json  soak_seed13_pneuma.json  soak_seed13_uniform.json  soak_seed7_pneuma.json  soak_seed7_uniform.json
scripts/: axioma_ctl.sh  phase_a_n_iter_sweep.py  phase_e_pretrain.py  phase_e_soak.py  show_logs.py
tests/: conftest.py
(+1376 files in other folders)
